--- a/view/home/index/index.html
+++ b/view/home/index/index.html
@@ -1,300 +1,44 @@
-
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Socket.IO Chat Example</title>
-  <style>/* Fix user-agent */
-*{box-sizing:border-box}html{font-family:"HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;font-weight:300;-webkit-font-smoothing:antialiased}html,body{height:100%;margin:0;padding:0}ul{list-style:none}.pages{height:100%;margin:0;padding:0;width:100%}.page{height:100%;position:absolute;width:100%}.login.page{background-color:#000}.login.page .form{height:100px;margin-top:-100px;position:absolute;text-align:center;top:50%;width:100%}.login.page .form .usernameInput{background-color:transparent;border:0;border-bottom:2px solid #fff;outline:0;padding-bottom:15px;text-align:center;width:400px}.login.page .title{font-size:200%}.login.page .usernameInput{font-size:200%;letter-spacing:3px}.login.page .title,.login.page .usernameInput{color:#fff;font-weight:100}.chat.page{display:none}.messages{font-size:150%}.inputMessage{font-size:100%}.log{color:gray;font-size:70%;margin:5px;text-align:center}.chatArea{height:100%;padding-bottom:60px}.messages{height:100%;margin:0;overflow-y:scroll;padding:10px 20px 10px 20px}.message.typing .messageBody{color:gray}.username{float:left;font-weight:700;overflow:hidden;padding-right:15px;text-align:right}.inputMessage{border:10px solid #000;bottom:0;height:60px;left:0;outline:0;padding-left:10px;position:absolute;right:0;width:100%}
-  </style>
+    <meta charset="utf-8">
+    <title>在线客服客户端</title>
+    <link rel="stylesheet" href="/static/css/base.css">
+    <link rel="stylesheet" href="/static/css/smalltalk.min.css">
 </head>
 <body>
-  <ul class="pages">
-    <li class="chat page">
-      <div class="chatArea">
-        <ul class="messages"></ul>
-      </div>
-      <input class="inputMessage" placeholder="Type here..."/>
-    </li>
-    <li class="login page">
-      <div class="form">
-        <h3 class="title">What's your nickname?</h3>
-        <input class="usernameInput" type="text" maxlength="14" />
-      </div>
-    </li>
-  </ul>
-
-  <script src="http://s4.qhimg.com/static/535dde855bc726e2/socket.io-1.2.0.js"></script>
-  <script src="http://s4.qhimg.com/static/8b5050af3b8512e1/jquery.js"></script>
-  <script>
-  //$(function() {
-  var FADE_TIME = 150; // ms
-  var TYPING_TIMER_LENGTH = 400; // ms
-  var COLORS = [
-    '#e21400', '#91580f', '#f8a700', '#f78b00',
-    '#58dc00', '#287b00', '#a8f07a', '#4ae8c4',
-    '#3b88eb', '#3824aa', '#a700ff', '#d300e7'
-  ];
-
-  // Initialize varibles
-  var $window = $(window);
-  var $usernameInput = $('.usernameInput'); // Input for username
-  var $messages = $('.messages'); // Messages area
-  var $inputMessage = $('.inputMessage'); // Input message input box
-
-  var $loginPage = $('.login.page'); // The login page
-  var $chatPage = $('.chat.page'); // The chatroom page
-
-  // Prompt for setting a username
-  var username;
-  var connected = false;
-  var typing = false;
-  var lastTypingTime;
-  var $currentInput = $usernameInput.focus();
-
-  var socket = io('http://localhost:8360');
-
-  function addParticipantsMessage (data) {
-    var message = '';
-    if (data.numUsers === 1) {
-      message += "there's 1 participant";
-    } else {
-      message += "there are " + data.numUsers + " participants";
-    }
-    log(message);
-  }
-
-  // Sets the client's username
-  function setUsername () {
-    username = cleanInput($.trim($usernameInput.val()));
-    // If the username is valid
-    if (username) {
-      $loginPage.fadeOut();
-      $chatPage.show();
-      $loginPage.off('click');
-      $currentInput = $inputMessage.focus();
-
-      // Tell the server your username
-      socket.emit('adduser', username);
-    }
-  }
-
-  // Sends a chat message
-  function sendMessage () {
-    var message = $inputMessage.val();
-    // Prevent markup from being injected into the message
-    message = cleanInput(message);
-    // if there is a non-empty message and a socket connection
-    if (message && connected) {
-      $inputMessage.val('');
-      addChatMessage({
-        username: username,
-        message: message
-      });
-      // tell server to execute 'new message' and send along one parameter
-      socket.emit('chat', message);
-    }
-  }
-
-  // Log a message
-  function log (message, options) {
-    var $el = $('<li style="display:block"/>').addClass('log').text(message);
-    addMessageElement($el, options);
-  }
-
-  // Adds the visual chat message to the message list
-  function addChatMessage (data, options) {
-    // Don't fade the message in if there is an 'X was typing'
-    var $typingMessages = getTypingMessages(data);
-    options = options || {};
-    if ($typingMessages.length !== 0) {
-      options.fade = false;
-      $typingMessages.remove();
-    }
-
-    var $usernameDiv = $('<span class="username" />')
-      .text(data.username)
-      .css('color', getUsernameColor(data.username));
-    var $messageBodyDiv = $('<span class="messageBody" />')
-      .text(data.message);
-
-    var typingClass = data.typing ? 'typing' : '';
-    var $messageDiv = $('<li class="message"></li>')
-      .data('username', data.username)
-      .addClass(typingClass);
-    addMessageElement($messageDiv, options);
-    $messageDiv.append($usernameDiv);
-    $messageDiv.append($messageBodyDiv);
-  }
-
-  // Adds the visual chat typing message
-  function addChatTyping (data) {
-    data.typing = true;
-    data.message = 'is typing';
-    addChatMessage(data);
-  }
-
-  // Removes the visual chat typing message
-  function removeChatTyping (data) {
-    getTypingMessages(data).fadeOut(function () {
-      $(this).remove();
-    });
-  }
-
-  // Adds a message element to the messages and scrolls to the bottom
-  // el - The element to add as a message
-  // options.fade - If the element should fade-in (default = true)
-  // options.prepend - If the element should prepend
-  //   all other messages (default = false)
-  function addMessageElement (el, options) {
-    var $el = $(el);
-
-    // Setup default options
-    if (!options) {
-      options = {};
-    }
-    if (typeof options.fade === 'undefined') {
-      options.fade = true;
-    }
-    if (typeof options.prepend === 'undefined') {
-      options.prepend = false;
-    }
-
-    // Apply options
-    if (options.fade) {
-      $el.hide().fadeIn(FADE_TIME);
-    }
-    if (options.prepend) {
-      $messages.prepend($el);
-    } else {
-      $messages.append($el);
-    }
-    $messages[0].scrollTop = $messages[0].scrollHeight;
-  }
-
-  // Prevents input from having injected markup
-  function cleanInput (input) {
-    return $('<div/>').text(input).text();
-  }
-
-  // Updates the typing event
-  function updateTyping () {
-    if (connected) {
-      if (!typing) {
-        typing = true;
-        socket.emit('typing');
-      }
-      lastTypingTime = (new Date()).getTime();
-
-      setTimeout(function () {
-        var typingTimer = (new Date()).getTime();
-        var timeDiff = typingTimer - lastTypingTime;
-        if (timeDiff >= TYPING_TIMER_LENGTH && typing) {
-          socket.emit('stoptyping');
-          typing = false;
-        }
-      }, TYPING_TIMER_LENGTH);
-    }
-  }
-
-  // Gets the 'X is typing' messages of a user
-  function getTypingMessages (data) {
-    return $('.typing.message').filter(function (i) {
-      return $(this).data('username') === data.username;
-    });
-  }
-
-  // Gets the color of a username through our hash function
-  function getUsernameColor (username) {
-    // Compute hash code
-    var hash = 7;
-    for (var i = 0; i < username.length; i++) {
-       hash = username.charCodeAt(i) + (hash << 5) - hash;
-    }
-    // Calculate color
-    var index = Math.abs(hash % COLORS.length);
-    return COLORS[index];
-  }
-
-  var keydown = function (event) {
-    // Auto-focus the current input when a key is typed
-    if (!(event.ctrlKey || event.metaKey || event.altKey)) {
-      $currentInput.focus();
-    }
-    // When the client hits ENTER on their keyboard
-    if (event.which === 13) {
-      if (username) {
-        sendMessage();
-        socket.emit('stoptyping');
-        typing = false;
-      } else {
-        setUsername();
-      }
-    }
-  }
-
-  $usernameInput.keydown(keydown);
-  $inputMessage.keydown(keydown);
-  // Keyboard events
-  //$window.keypress(keydown);
-
-  $inputMessage.on('input', function() {
-    updateTyping();
-  });
-
-  // Click events
-
-  // Focus input when clicking anywhere on login page
-  $loginPage.click(function () {
-    $currentInput.focus();
-  });
-
-  // Focus input when clicking on the message input's border
-  $inputMessage.click(function () {
-    $inputMessage.focus();
-  });
-
-  // Socket events
-
-  // Whenever the server emits 'login', log the login message
-  socket.on('login', function (data) {
-    connected = true;
-    // Display the welcome message
-    var message = "Welcome to Socket.IO Chat – ";
-    log(message, {
-      prepend: true
-    });
-    addParticipantsMessage(data);
-  });
-
-  // Whenever the server emits 'new message', update the chat body
-  socket.on('chat', function (data) {
-    addChatMessage(data);
-  });
-
-  // Whenever the server emits 'user joined', log it in the chat body
-  socket.on('userjoin', function (data) {
-    log(data.username + ' joined');
-    addParticipantsMessage(data);
-  });
-
-  // Whenever the server emits 'user left', log it in the chat body
-  socket.on('userleft', function (data) {
-    log(data.username + ' left');
-    addParticipantsMessage(data);
-    removeChatTyping(data);
-  });
-
-  // Whenever the server emits 'typing', show the typing message
-  socket.on('typing', function (data) {
-    addChatTyping(data);
-  });
-
-  // Whenever the server emits 'stop typing', kill the typing message
-  socket.on('stoptyping', function (data) {
-    removeChatTyping(data);
-  });
-//});
-</script>
+    <div id="app" class="app">
+        <div id="side" class="side">
+            <div class="main">
+                <img src="/static/img/head.jpg">
+                <h2></h2>
+                <span id="btn-session" class="active">
+                    <svg t="1481263967849" class="sicon " style="" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5869" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <path d="M511.186472 866.536712c-32.603559 0-63.565734-1.656733-94.55247-8.219195l-122.253368 82.06711c-3.238764 1.656733-8.147564 3.28072-13.038968 3.28072-13.048177 0-24.450878-9.843182-24.450878-26.251897V795.937794c-115.735931-72.190159-192.349843-190.385095-192.349843-323.313593 0-216.654388 200.512756-392.289548 448.27463-392.289548 247.783363 0 448.2777 175.636183 446.6312 393.913535 0.001023 216.652342-200.494337 392.288524-448.260303 392.288524z m0-718.897164c-211.900108 0-383.070582 146.068773-383.070583 326.610686 0 105.054661 60.306504 205.152427 161.374365 265.908163l16.310477 9.843182c9.778714 4.906753 16.299221 16.408715 16.299221 27.907607v64.004732l58.682517-39.409568 11.397585-8.18645c8.157797-4.939499 16.306384-6.563486 24.454971-4.939499l13.052271 3.282767c27.695782 4.938476 55.417147 8.219195 83.129302 8.219195 210.293517 0 383.070582-147.727553 381.418966-326.629105 0-180.542936-171.129542-326.611709-383.049092-326.61171z m202.110137 390.629745c-29.693276 0-53.79316-24.24724-53.79316-54.177923 0-29.877471 24.099884-54.140061 53.79316-54.140061 29.722952 0 53.821813 24.26259 53.821813 54.140061 0 29.930683-24.097838 54.177923-53.821813 54.177923z m-197.22385 0c-29.705556 0-53.78702-24.24724-53.787021-54.177923 0-29.877471 24.081465-54.140061 53.787021-54.140061 29.711695 0 53.80544 24.26259 53.80544 54.140061 0 29.930683-24.093744 54.177923-53.80544 54.177923z m-203.751521 0c-29.724998 0-53.804417-24.24724-53.804416-54.177923 0-29.877471 24.079418-54.140061 53.804416-54.140061 29.707602 0 53.78702 24.26259 53.787021 54.140061 0 29.930683-24.079418 54.177923-53.787021 54.177923z" p-id="5870" fill="#1296db"></path>
+                    </svg>
+                </span>
+            </div>
+        </div>
+        <div id="linkman" class="linkman">
+            <div class="main">
+                <div class="header"> <input type="search" name=""> <i id="btn-add">+</i> </div>
+                <div class="body">
+                    <ul id="session"></ul>
+                </div>
+            </div>
+        </div>
+        <div id="chat"></div>
+    </div>
+    <!-- 播放提示音 -->
+    <audio id="ding" src="/static/res/ding.mp3">不支持 audio 标签</audio>
+    <!-- 聊天表情 -->
+    <div id="emoji" class="shadow move"><span>😂</span><span>😀</span><span>😭</span><span>😹</span><span>🙏</span><span>😬</span><span>😁</span><span>😃</span><span>😄</span><span>😅</span><span>😆</span><span>😇</span><span>😉</span><span>😊</span><span>🙂</span><span>🙃</span><span>😋</span><span>😌</span><span>😍</span><span>😘</span><span>😗</span><span>😙</span><span>😚</span><span>😜</span><span>😝</span><span>😛</span><span>🤑</span><span>🤓</span><span>😎</span><span>🤗</span><span>😏</span><span>😶</span><span>😐</span><span>😑</span><span>😒</span><span>🙄</span><span>🤔</span><span>😳</span><span>😞</span><span>😟</span><span>😠</span><span>😡</span><span>😔</span><span>😕</span><span>🙁</span><span>😣</span><span>😖</span><span>😫</span><span>😩</span><span>😤</span><span>😮</span><span>😨</span><span>😰</span><span>😯</span><span>😦</span><span>😧</span><span>😢</span><span>😥</span><span>😪</span><span>😵</span><span>😲</span><span>🤐</span><span>😷</span><span>🤒</span><span>🤕</span><span>😴</span><span>💤</span><span>🙌</span><span>👏</span><span>👋</span><span>👊</span><span>👌</span><span>💪</span><span>👍</span><span>👆</span><span>👇</span><span>👈</span><span>👉</span><span>🖕</span><span>🤘</span><span>🖖</span><span>💩</span><span>😈</span><span>👿</span><span>👹</span><span>👺</span><span>💀</span><span>👻</span><span>👽</span><span>🤖</span><span>😺</span><span>😸</span><span>😻</span><span>😼</span><span>😽</span><span>🙀</span><span>😿</span><span>😾</span><span>💅</span><span>👄</span><span>👅</span><span>👂</span><span>👃</span><span>👁</span><span>👀</span><span>👤</span><span>🗣</span><span>👶</span><span>👦</span><span>👧</span><span>👨</span><span>👩</span><span>👱</span><span>👴</span><span>👵</span><span>👲</span><span>👳</span><span>👮</span><span>👷</span><span>💂</span></div>
+    <!-- 加载时动画 -->
+    <div class="outline"><img src="/static/img/loading.gif"></div>
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/socket.io.min.js"></script>
+    <script src="/static/js/md5.js"></script>
+    <script src="/static/lib/smalltalk/smalltalk.min.js"></script>
+    <script src="/static/js/im.js"></script>
 </body>
 </html>
