--- a/view/home/index/userlogin.html
+++ b/view/home/index/userlogin.html
@@ -5,6 +5,7 @@
   <title>User Login Page</title>
   <style>/* Fix user-agent */
 *{box-sizing:border-box}html{font-family:"HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;font-weight:300;-webkit-font-smoothing:antialiased}html,body{height:100%;margin:0;padding:0}ul{list-style:none}.pages{height:100%;margin:0;padding:0;width:100%}.page{height:100%;position:absolute;width:100%}.login.page{background-color:#000}.login.page .form{height:100px;margin-top:-100px;position:absolute;text-align:center;top:50%;width:100%}.login.page .form .text-input{background-color:transparent;border:0;border-bottom:2px solid #fff;outline:0;padding-bottom:15px;text-align:center;width:400px}.login.page .title{font-size:200%}.login.page .text-input{font-size:200%;letter-spacing:3px}.login.page .title,.login.page .text-input{color:#fff;font-weight:100}.chat.page{display:none}.messages{font-size:150%}.inputMessage{font-size:100%}.log{color:gray;font-size:70%;margin:5px;text-align:center}.chatArea{height:100%;padding-bottom:60px}.messages{height:100%;margin:0;overflow-y:scroll;padding:10px 20px 10px 20px}.message.typing .messageBody{color:gray}
+  .login-btn { width: 9%; background: #fff; border: none; padding: 10px; }
   </style>
 </head>
 <body>
@@ -44,9 +45,12 @@
         dataType: "json",
         success: function(res) {
           if (res.errno == 0) {
+            window.localStorage.setItem("username", res.data.username);
             window.location.href = '/home/index/index'
           } else {
-
+            smalltalk.alert('Error', '登录失败!').then(function() {
+              // console.log('ok');
+            });
           }
         },
         error: function(res) {
