注册与登录

--- a/view/home/register/index.html
+++ b/view/home/register/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>登录</title>
+  <title>注册</title>
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 <body class="templatemo-bg-gray">
   <div class="container">
     <div class="col-md-12">
-      <h1 class="margin-bottom-15">登&nbsp;&nbsp;录</h1>
+      <h1 class="margin-bottom-15">注&nbsp;&nbsp;册</h1>
       <form class="form-horizontal templatemo-container templatemo-login-form-1 margin-bottom-30" method="post">
             <div class="form-group">
               <div class="col-xs-12">
@@ -32,29 +32,26 @@
             </div>
             <div class="form-group">
               <div class="col-md-12">
-                <div class="checkbox control-wrapper">
-                    <label>
-                        <input type="checkbox"> 记住我
-                    </label>
-                  </div>
+                <div class="control-wrapper">
+                  <p class="error-info" style="display:none"></p>
+                </div>
               </div>
             </div>
             <div class="form-group">
               <div class="col-md-12">
                 <div class="control-wrapper">
-                  <input type="button" value="登&nbsp;录" class="btn btn-info login-btn">
-                  <a href="#" class="text-right pull-right">忘记密码?</a>
+                  <input type="button" value="注&nbsp;册" class="btn btn-info register-btn">
                 </div>
               </div>
             </div>
             <hr>
           </form>
           <div class="text-center">
-            <a href="/home/register" class="templatemo-create-new">注&nbsp;册 <i class="fa fa-arrow-circle-o-right"></i></a>
+            <a href="/home/login" class="templatemo-create-new">登&nbsp;录 <i class="fa fa-arrow-circle-o-right"></i></a>
           </div>
     </div>
   </div>
   <script src="/static/js/jquery.min.js"></script>
-  <script src="/static/js/login.js"></script>
+  <script src="/static/js/register.js"></script>
 </body>
 </html>
